# mdformat-openmmlab

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: python-publish.yml  tests.yml
mdformat_openmmlab/: __init__.py  gfm.py  plugin.py  table.py  text.py
tests/: test_fixtures.py
